manifests/ingess/avalon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avalon-ingress
spec:
  rules:
    - host: avalonforgotpassword.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avalon-emailhandler
                port:
                  number: 80
    - host: avalongame.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gamelogic
                port:
                  number: 80
